syntax = "proto3";

package user;

option go_package = "github.com/reagan/grpc-learning-project/server/pb";

service UserService {
  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  
  // Get a user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}
